--- a/src/templates/main-content.html
+++ b/src/templates/main-content.html
@@ -2,13 +2,12 @@
 	<div class="span10">
 		<div class="hero-unit">
 			<h1>Welcome to Backbone Marionette App</h1>
-			<p>This is your home page. To edit, modify home.html</p>
 		  <p>
-		    <a class="btn btn-primary btn-large" href="http://github.com/azat-co/super-simple-backbone-starter-kit">
+		    <a class="btn btn-primary btn-large" href="https://github.com/shek8034/backbone-marionette-template.git">
 		      Learn more
 		    </a>
 
-		    <select id="example-getting-started" multiple="multiple">
+		    <select id="multiselect-options" multiple="multiple">
 		        <option value="chair">chair</option>
 		        <option value="table">table</option>
 		        <option value="sofa">sofa</option>
