Added Marionette Layout View/Composite view, Backbone collection/model, zefo api calls

--- a/src/templates/main-content.html
+++ b/src/templates/main-content.html
@@ -1,22 +1,25 @@
 <div class="row-fluid">
 	<div class="span10">
 		<div class="hero-unit">
-			<h1>Welcome to Backbone Marionette App</h1>
-		  <p>
-		    <a class="btn btn-primary btn-large" href="https://github.com/shek8034/backbone-marionette-template.git">
-		      Learn more
-		    </a>
 
-		    <select id="multiselect-options" multiple="multiple">
-		        <option value="chair">chair</option>
-		        <option value="table">table</option>
-		        <option value="sofa">sofa</option>
-		        <option value="bed">bed</option>
-		    </select>
+		    <div id="first-region">
+				<h1>Welcome to Backbone Marionette App</h1>
+				<div>
+				    <a class="btn btn-primary btn-large" href="https://github.com/shek8034/backbone-marionette-template.git">
+				      Learn more
+				    </a>
 
-		  </p>
+				    <select id="multiselect-options" multiple="multiple">
+				        <option value="chair">chair</option>
+				        <option value="table">table</option>
+				        <option value="sofa">sofa</option>
+				        <option value="bed">bed</option>
+				    </select>
+				</div>
+			</div>
+
+			<div id="second-region"></div>
 		</div>
-
 
 	</div>
 </div>
