Updated main-content.html regions

--- a/src/templates/main-content.html
+++ b/src/templates/main-content.html
@@ -1,21 +1,19 @@
 <div class="row-fluid">
 	<div class="span10">
 		<div class="hero-unit">
+			<h1>Welcome to Backbone Marionette App</h1>
+			<div>
+				<a class="btn btn-primary btn-large" href="https://github.com/shek8034/backbone-marionette-template.git">Learn more</a>
 
-			<div id="first-region">
-				<h1>Welcome to Backbone Marionette App</h1>
-				<div>
-					<a class="btn btn-primary btn-large" href="https://github.com/shek8034/backbone-marionette-template.git">Learn more</a>
-
-					<select id="multiselect-options" multiple="multiple">
-						<option value="chair">chair</option>
-						<option value="table">table</option>
-						<option value="sofa">sofa</option>
-						<option value="bed">bed</option>
-					</select>
-				</div>
+				<select id="multiselect-options" multiple="multiple">
+					<option value="chair">chair</option>
+					<option value="table">table</option>
+					<option value="sofa">sofa</option>
+					<option value="bed">bed</option>
+				</select>
 			</div>
 
+			<div id="first-region"></div>
 			<div id="second-region"></div>
 		</div>
 
