Added buttons and checkbox logic

--- a/src/templates/item-container.hbs
+++ b/src/templates/item-container.hbs
@@ -1,6 +1,4 @@
 <div class="item-container">
-	<select id="item-options" multiple="multiple">
-		<option value= {{ name }} selected="true">{{ name }}</option>
-	</select>
-	<ul class="nested-category"></ul>
+	<button type="button" class="item-options">{{ name }}</button>
+	<ul class="nested-category" style="display: none"></ul>
 </div>
