--- a/src/templates/nested-item.hbs
+++ b/src/templates/nested-item.hbs
@@ -1,1 +1,3 @@
-<li class="nested-item">{{ name }}</li>
+<li class="nested-item" data-value="{{ name }}">
+	<input type="checkbox" class="item-checkbox"/>&nbsp;{{ name }}
+</li>
